# advent-of-code-2025

./: CMakeLists.txt
src/: advent_of_code_utils.cppm  day1.cpp
